--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     build: .
     image: bot_admin
     container_name: bot_admin_con
-    command: uvicorn web.app:app --host 0.0.0.0 --port 8008
+    command: uvicorn admin.app:app --host 0.0.0.0 --port 8008
     ports:
       - '8008:8008'
 
